--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         hilt_version = "2.38.1"
         room_version = "2.3.0"
         arch_version = "2.3.0"
+        epoxy_version = "4.6.4"
     }
     repositories {
         google()
